Tweak punctuation in man page

--- a/difft.1
+++ b/difft.1
@@ -154,6 +154,4 @@ See GitHub issues at \c
 .UE \c
 \&.
 .SH AUTHOR
-Wilfred Hughes \c
-.MT me@wilfred.me.uk
-.ME \c
+Wilfred Hughes me\[at]wilfred.me.uk
